Fix overflow
Fix #7

--- a/styles/intro.css
+++ b/styles/intro.css
@@ -17,6 +17,7 @@
 body {
   background-color: var(--main-bg-colour);
   padding: 1em;
+  overflow-x: hidden;
   display: grid;
   grid-template-rows: 38vh max-content max-content 1fr;
   grid-template-areas:
